# rest-api-benchmark

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  language_implementation.md  performance_issue.md
.github/workflows/: benchmark.yml  ci.yml  dependency-updates.yml  deploy-benchmark.yml  issue-automation.yml  performance.yml  release.yml  security_scan.yml
k6/: http-bench.js  package-lock.json  package.json  scenarios.json
orchestration/: run-suite.sh
scripts/: setup.sh
services/bun/: Dockerfile  index.ts  package.json
services/cpp/: CMakeLists.txt  Dockerfile
services/cpp/src/: main.cpp
services/cpp/src/tests/: hello_world.cpp  hello_world.h  json_serde.cpp  json_serde.h  n_body.cpp  n_body.h  pi_digits.cpp  pi_digits.h  regex_redux.cpp  regex_redux.h
services/csharp/: CSharpBenchmark.csproj  Dockerfile
services/deno/: Dockerfile  deno.json
services/elixir/: Dockerfile  mix.exs
services/golang/: .gitignore  Dockerfile  go.mod  main.go
services/java17/: Dockerfile  pom.xml
services/java21/: Dockerfile  pom.xml
services/node/: Dockerfile
services/rust/: .gitignore  Cargo.toml  Dockerfile
services/rust/src/: main.rs
services/rust/src/tests/: hello_world.rs  json_serde.rs  mod.rs  n_body.rs  pi_digits.rs  regex_redux.rs
utils/: summarize.mjs  sysctl.sh  upload-mongo.mjs
(+71 files in other folders)
